// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Author custom-test"
>
  <span
    aria-label="Keegan avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar"
      decoding="async"
      height={48}
      src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
      width={48}
    />
    <span
      className="name"
    >
      Keegan
    </span>
  </span>
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Author "
>
  <span
    aria-label="Keegan avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar"
      decoding="async"
      height={48}
      src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
      width={48}
    />
    <span
      className="name"
    >
      Keegan
    </span>
  </span>
</div>
`;

exports[`Test no name 1`] = `
<div
  className="Pinpoint Author "
>
  <span
    aria-label=" avatar"
    className="Pinpoint Internal Link  "
  >
    <img
      alt=""
      className="Pinpoint Image avatar"
      decoding="async"
      height={48}
      src="https://file.pinpoint.com/6cc744395c563f0072b339070aa327f3;UCGt%3D%3DkE~A%3FZJ6%5EhIpS%23o%5BELE3oLT0I%40t7E2;400x400.png?rw=48&rh=48"
      width={48}
    />
    <span
      className="name"
    >
      
    </span>
  </span>
</div>
`;
